2007-12-27 Matvey Kozhev <sikon at users.sourceforge.net>

	* INSTALL:
	  Updated dependency versions.

2007-12-26 Matvey Kozhev <sikon at users.sourceforge.net>

	* src/prefsdlg.c:
	* data/gtkpod.glade:
	  New preferences dialog mostly working, except for "advanced" buttons
	  and format conversion settings (greyed out).

2007-12-23  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: bump gtk+ requirement to 2.8.0 or newer
	
2007-12-21 Matvey Kozhev <sikon at users.sourceforge.net>
	* src/confirmation.c:
	  Remove GTK_DIALOG_NO_SEPARATOR from the GtkMessageDialog.
	  
	* data/gtkpod.glade:
	* src/prefs_window.c:
	  Migrate to GtkComboBox for sort_combo (fixes crash regression).
	  
	* src/misc_conversion.c:
	* src/display_sorttabs.c:
	  Applied patch to fix crash (ST_CAT_SPECIAL) in misc_conversion.c,
	  by Andrea <mariofutire@googlemail.com>
	  [misc_conversion.c: line 300 (ST_to_T): should not be reached]
	  
	* data/gtkpod.glade:
	* src/prefsdlg.c:
	  Fully implemented the first tab (Display).

2007-12-20 Daniele Forsi <dforsi at users.sourceforge.net>
	* display.c: add NULL terminator to the argument list for a call
	  to gnome_canvas_item_set()

2007-12-20 Matvey Kozhev <sikon at users.sourceforge.net>

    * data/gtkpod.glade:
    * src/prefsdlg.c:
    * src/Makefile.am:
      Mockup of the new preferences dialog, available in
      Edit -> Preferences (Experimental).
      
    * src/display_itdb.c:
      gtkpod.track_add_extra.typo.awn.1.patch by Andrew W. Nosenko
      <andrew.w.nosenko@gmail.com>:
      
      Fix typo, avoid re-creating ExtraTrackData if it already exists
      as consequence.
      
    * src/charset.c:
    * src/clientserver.c:
    * src/prefs_window.c:
    * src/prefs_window.h:
      gtkpod.gcc-warn.awn.1.patch_[zeT1qb].gcc-warn.awn.1.patch
      by Andrew W. Nosenko:
      
      Eliminate some GCC warnings.
      
    * doc/*:
    * doc/figures/*:
      Completed import of documentation from the wiki.
